# softrender

./: Cargo.toml  LICENSE.md  README.md
examples/: hello_triangle.rs  model_load.rs  testbed.rs  texture.rs
examples/hello_triangle/: fb_winit.rs  main.rs
examples/util/: camera.rs  mod.rs
softrender-derive/: Cargo.toml
softrender-derive/src/: lib.rs
src/: buf.rs  buf_winit.rs  fb.rs  fb_winit.rs  lib.rs  main.rs  math.rs  renderer.rs  shader.rs
