[package]
name = "softrender"
version = "0.1.0"
edition = "2021"

[lib]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glam = "0.24.0"
unzip-array-of-tuple = "0.1.0"
arrayvec = "0.7.2"
softrender-derive = { path = "softrender-derive" }

[dev-dependencies]
softbuffer = "0.2.0"
winit = "0.28.6"
tobj = "4.0.0"
rand = "0.8.5"